--- a/css/app.css
+++ b/css/app.css
@@ -129,6 +129,7 @@ body {
 
 .popup__content {
     position: relative;
+    overflow: hidden;
     width: 100%;
     height: 100%;
     max-width: 400px;
@@ -213,11 +214,11 @@ body {
 }
 
 .bolt {
-    border-radius: 25px;
-    height: 50px;
+    border-radius: 35px;
+    height: 70px;
     width: 220px;
     position: absolute;
-    right: -160px;
+    right: -150px;
     background: #6f1400;
 }
 
@@ -230,17 +231,18 @@ body {
 }
 
 .bolt__button {
-    width: 38px;
-    height: 38px;
-    left: 5px;
-    top: 5px;
+    width: 50px;
+    height: 50px;
+    left: 9px;
+    top: 9px;
     position: absolute;
-    border-radius: 40px;
+    border-radius: 52px;
     background-color: #583319;
     border: 1px solid #F3E9E0;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, .4);
     transition: background-color .3s;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 .bolt__button--clickable {
@@ -381,21 +383,8 @@ body {
     line-height: 50px;
 }
 
-.star:before {
-    width: 1px;
-    height: 1px;
-    background: #000;
-    position: absolute;
-    content: '';
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-}
-
 .star--selected {
-    border: 3px solid #fff;
+    border: 1px solid #f00;
 }
 
 .star--1 {
@@ -468,8 +457,8 @@ body {
     position: absolute;
     z-index: 3;
     display: none;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     border: 1px solid #F3E9E0;
     left: 0;
@@ -477,8 +466,11 @@ body {
     top: 0;
     bottom: 0;
     margin: auto;
-    background: rgba(88, 51, 25, .5) url('../img/teeth.png') center no-repeat;
-    background-size: 45px 45px;
+    background: rgb(88, 51, 25) url('../img/teeth.png') center no-repeat;
+    background-size: 55px 55px;
+}
+.teeth--active {
+    background-color: #F3E5D9;
 }
 
 .indicator {
