--- a/css/app.css
+++ b/css/app.css
@@ -188,6 +188,97 @@ body {
     background-color: #F3E5D9;
 }
 
+.gears {
+    z-index: 2;
+    width: 250px;
+    height: 250px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+
+.gear {
+    box-sizing: border-box;
+    position: absolute;
+    width: 65px;
+    height: 65px;
+    background-color: #583319;
+    border: 1px solid #F3E9E0;
+    border-radius: 50%;
+    background-size: 57px 57px !important;
+}
+
+.gear--selected {
+    border: 2px solid #fff;
+}
+
+.gear--1 {
+    background: yellow url('../img/gear1.png') center no-repeat;
+    top: 0;
+    left: 0;
+}
+
+.gear--2 {
+    background: blue url('../img/gear2.png') center no-repeat;
+    top: 0;
+    right: 0;
+}
+
+.gear--3{
+    background: green url('../img/gear3.png') center no-repeat;
+    bottom: 0;
+    left: 0;
+}
+
+.gear--4 {
+    background: red url('../img/gear4.png') center no-repeat;
+    bottom: 0;
+    right: 0;
+}
+
+.slots {
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    bottom: 40px;
+    text-align: center;
+}
+.slot {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 3px;
+    width: 70px;
+    height: 70px;
+    background-color: #583319;
+    border-radius: 50%;
+}
+
+.slot--1 {
+    border: 1px solid yellow;
+    top: 0;
+    left: 0;
+}
+
+.slot--2 {
+    border: 1px solid blue;
+    top: 0;
+    right: 0;
+}
+
+.slot--3{
+    border: 1px solid green;
+    bottom: 0;
+    left: 0;
+}
+
+.slot--4 {
+    border: 1px solid red;
+    bottom: 0;
+    right: 0;
+}
 
 .dialogs {
     position: absolute;
